--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "felt-pen",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Tiny ANSI terminal coloring library",
-  "main": "index.js",
   "type": "module",
+  "main": "index.cjs",
+  "module": "index.mjs",
+  "exports": {
+    ".": {
+      "require": "./index.cjs",
+      "import": "./index.mjs",
+      "default": "./index.mjs"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
-    "test": "node ./demo.js",
-    "bench": "node ./bench.js"
+    "test": "node ./demo.mjs && node ./demo.cjs"
   },
   "repository": "http://github.com/nin-jin/felt-pen",
   "author": "http://github.com/nin-jin",
