--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 
 defaults:
   run:
-    shell: 'script -q -e -c "bash {0}"'
+    shell: 'script -q -e -c "bash --noprofile --norc -eo pipefail {0}"'
 
 jobs:
   tests:
